[BACKLOG-39594] JDK17 update, mockito update to newer version