@@ -5,9 +5,13 @@
   <parent>
     <groupId>pentaho</groupId>
     <artifactId>cpf-plugin</artifactId>
-    <version>10.1.0.0-SNAPSHOT</version>
+    <version>10.2.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>cpf-pentaho</artifactId>
+
+  <properties>
+    <maven-surefire-plugin.argLine> --add-opens=java.base/java.lang=ALL-UNNAMED </maven-surefire-plugin.argLine>
+  </properties>
 
   <dependencies>
     <dependency>
@@ -151,6 +155,8 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>jaxen</groupId>
@@ -189,23 +195,9 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-module-junit4</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-api-mockito</artifactId>
+      <version>${mockito.version}</version>
     </dependency>
     <!-- endregion -->
   </dependencies>
+
 </project>
